# this.ssh

./: .gitignore  LICENSE  Makefile  README.md  _config.yml  build-linux.sh  build-mac.sh  nuxt.config.ts  package-lock.json  package.json
.github/workflows/: build-all-platforms.yml  build-dev.yml  build-linux.yml  linux-release.yml  update-readme.yml
assets/css/: main.css
components/: AssignHostModal.vue  CreateKeyModal.vue  FloatingActionButton.vue  Header.vue  HostBadge.vue  KeyCard.vue  KeyCardMenu.vue  KeyHosts.vue  Keys.vue  Main.vue  Modal.vue  RemoveKeyConfirmationModal.vue
composables/: useStateModifier.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs
types/: core-types.ts
