[package]
name = "this-dot-ssh"
version = "1.0.0"
description = "SSH Management Made Simple"
authors = ["dk3tm"]
license = "Apache 2.0"
repository = "https://github.com/dh00mk3tu/this.ssh"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
dirs = "5.0"
ssh-key = "0.6.7"
